--- a/src/css/GalleryScreen.css
+++ b/src/css/GalleryScreen.css
@@ -1,8 +1,6 @@
 .container {
     display: flex;
-    /* Flexbox 레이아웃 활성화 */
     flex-direction: row;
-    /* 요소들을 가로로 정렬 */
     width: 100%;
     min-height: 100vh;
 }
@@ -10,37 +8,26 @@
 .menu-container {
     z-index: 99999;
     left: 0;
-    top: 0px;
+    top: 0;
     position: fixed;
     width: 250px;
-    /* 메뉴 컨테이너 너비를 명시 */
     height: 100%;
 }
 
 .menu-screen {
     display: flex;
-    /* Flexbox 레이아웃 활성화 */
     flex-direction: column;
-    /* 요소들을 세로로 정렬 */
     justify-content: flex-start;
-    /* 요소들을 컨테이너의 시작 부분(위)에 정렬 */
     align-items: center;
-    /* 요소들을 가로 방향의 중앙에 정렬 */
     height: 100%;
     width: 100%;
-    /* background-color: #e0f9d2; */
-    background-color: #20493C
+    background-color: #20493C;
 }
-
-/* 나머지 스타일 설정은 그대로 유지 */
-
 
 .menu-title {
     color: #ffffff;
-    /* 글자 색상 */
     margin-top: 35px;
     margin-bottom: 20px;
-    /* 제목 아래 마진 */
     font-size: 40px;
 }
 
@@ -67,7 +54,6 @@
 
 .menu-button:hover {
     background-color: #45a049;
-    /* 버튼 호버 시 색상 변경 */
 }
 
 .menu .line_on {
@@ -77,34 +63,31 @@
     cursor: pointer;
 }
 
-/* 갤러리 화면 */
 .gallery-container {
-    /*flex: 1;*/
-    /* 남은 공간을 모두 차지 */
+    flex: 1;
     height: 100vh;
-    /* 전체 뷰포트 높이 */
-    position: relative;
-    margin-left: 230px;
-    /* 메뉴 컨테이너의 너비만큼 여백을 추가 */
+    margin-left: 250px;
+    overflow-y: auto;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 10px;
+    padding: 20px;
 }
 
 .gallery img {
-    width: 250px;
-    /* 그리드 셀의 너비에 맞게 조정 */
+    width: 100%;
     height: auto;
     max-height: 200px;
-    /* 이미지의 높이 */
     object-fit: cover;
-    /* 이미지 비율을 유지하면서 영역에 맞게 조절 */
     border-radius: 8px;
-    /* 둥근 모서리 */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /* 그림자 효과 */
 }
 
 .gallery figure {
     margin: 0;
-    /* 기본 마진 제거 */
 }
 
 .gallery figcaption {
