--- a/src/css/GalleryScreen.css
+++ b/src/css/GalleryScreen.css
@@ -68,17 +68,16 @@
     height: 100vh;
     margin-left: 250px;
     overflow-y: auto; /* 수직 스크롤 활성화 */
-}
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap; /* 줄 바꿈을 하도록 설정 */
-    gap: 10px;
     padding: 20px;
 }
 
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 10px;
+}
+
 .gallery figure {
-    flex: 0 1 calc(25% - 10px); /* 각 요소의 너비를 25%로 설정하고 간격을 고려 */
     margin: 0;
 }
 
