--- a/src/css/GalleryScreen.css
+++ b/src/css/GalleryScreen.css
@@ -27,15 +27,16 @@
 .menu-title {
     color: #ffffff;
     margin-top: 35px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-size: 40px;
 }
 
 .menu-id {
     color: #ffffff;
     align-self: flex-end;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
     margin-right: 10px;
+    font-size: 15px;
 }
 
 .menu-button {
