--- a/src/css/GalleryScreen.css
+++ b/src/css/GalleryScreen.css
@@ -96,3 +96,53 @@
     color: #555;
     margin-top: 5px;
 }
+
+
+/* 모바일 스타일 */
+@media (max-width: 600px) {
+    .container {
+        flex-direction: column;
+        min-height: auto;
+    }
+
+    .menu-container {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .gallery-container {
+        margin-left: 0;
+        padding: 10px;
+        height: auto;
+    }
+
+    .menu-title {
+        font-size: 24px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    .menu-id {
+        font-size: 14px;
+        margin-bottom: 30px;
+    }
+
+    .menu-button {
+        font-size: 14px;
+        width: 90%;
+        height: 40px;
+    }
+
+    .gallery {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    }
+
+    .gallery img {
+        height: 150px; /* 모바일에서 이미지 높이 줄이기 */
+    }
+
+    .gallery figcaption {
+        font-size: 12px;
+    }
+}
