--- a/src/css/LocationScreen.css
+++ b/src/css/LocationScreen.css
@@ -79,3 +79,46 @@
 .menu .line_on {background:url(../../public/images/train/select_box.png) 50% no-repeat;width:180px;height:50px;cursor:pointer;}
 
 
+/* 모바일 스타일 */
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    min-height: auto;
+  }
+
+  .map-container {
+    margin-left: 0;
+    height: auto;
+  }
+
+  .menu-container {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+
+  .menu-screen {
+    padding: 10px;
+  }
+
+  .menu-title {
+    font-size: 24px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .menu-id {
+    font-size: 14px;
+    margin-bottom: 30px;
+  }
+
+  .menu-button {
+    font-size: 14px;
+    width: 90%;
+    height: 40px;
+  }
+
+  .map-container #map {
+    height: 50vh; /* 모바일에서 맵 높이 조정 */
+  }
+}
