--- a/src/css/LocationScreen.css
+++ b/src/css/LocationScreen.css
@@ -7,9 +7,10 @@
 
 .map-container {
   flex: 1;  /* 남은 공간을 모두 차지 */
+  width: 100%;
   height: 100vh; /* 전체 뷰포트 높이 */
   position: relative;
-  margin-left: 230px; /* 메뉴 컨테이너의 너비만큼 여백을 추가 */
+  margin-left: 250px; /* 메뉴 컨테이너의 너비만큼 여백을 추가 */
 }
 
 .map-container #map {
@@ -23,7 +24,7 @@
 .menu-container {
   z-index: 99999; 
   left: 0;
-  top: 0px; 
+  top: 0; 
   position: fixed; 
   width: 250px; /* 메뉴 컨테이너 너비를 명시 */
   height: 100%; 
@@ -36,12 +37,8 @@
   align-items: center; /* 요소들을 가로 방향의 중앙에 정렬 */
   height: 100%;
   width: 100%;
-  /* background-color: #e0f9d2; */
-  background-color:#20493C
+  background-color: #20493C;
 }
-
-/* 나머지 스타일 설정은 그대로 유지 */
-
 
 .menu-title {
   color: #ffffff;
@@ -76,8 +73,12 @@
   background-color: #45a049; /* 버튼 호버 시 색상 변경 */
 }
 
-.menu .line_on {background:url(../../public/images/train/select_box.png) 50% no-repeat;width:180px;height:50px;cursor:pointer;}
-
+.menu .line_on {
+  background: url(../../public/images/train/select_box.png) 50% no-repeat;
+  width: 180px;
+  height: 50px;
+  cursor: pointer;
+}
 
 /* 모바일 스타일 */
 @media (max-width: 600px) {
@@ -88,7 +89,7 @@
 
   .map-container {
     margin-left: 0;
-    height: auto;
+    height: 50vh; /* 모바일에서 맵 높이 조정 */
   }
 
   .menu-container {
@@ -119,6 +120,6 @@
   }
 
   .map-container #map {
-    height: 50vh; /* 모바일에서 맵 높이 조정 */
+    height: 100%;
   }
 }
