--- a/src/css/traininfo_user_v2.css
+++ b/src/css/traininfo_user_v2.css
@@ -13635,6 +13635,85 @@
 
 /* 미디어 쿼리 */
 @media (max-width: 600px) {
+    .T0405_Y_1_v2, .T0406_Y_1_v2, .T0408_Y_1_v2, .T0409_Y_1_v2,
+    .T0410_Y_1_v2, .T0411_Y_1_v2, .T0412_Y_1_v2, .T0413_Y_1_v2,
+    .T0414_Y_1_v2, .T0415_Y_1_v2, .T0416_Y_1_v2, .T0417_Y_1_v2,
+    .T0418_Y_1_v2, .T0419_Y_1_v2, .T0420_Y_1_v2, .T0421_Y_1_v2,
+    .T0422_Y_1_v2, .T0423_Y_1_v2, .T0424_Y_1_v2, .T0425_Y_1_v2,
+    .T0426_Y_1_v2, .T0427_Y_1_v2, .T0428_Y_1_v2, .T0429_Y_1_v2,
+    .T0430_Y_1_v2, .T0431_Y_1_v2, .T0432_Y_1_v2, .T0433_Y_1_v2,
+    .T0434_Y_1_v2, .T0405_N_1_v2, .T0406_N_1_v2, .T0408_N_1_v2,
+    .T0409_N_1_v2, .T0410_N_1_v2, .T0411_N_1_v2, .T0412_N_1_v2,
+    .T0413_N_1_v2, .T0414_N_1_v2, .T0415_N_1_v2, .T0416_N_1_v2,
+    .T0417_N_1_v2, .T0418_N_1_v2, .T0419_N_1_v2, .T0420_N_1_v2,
+    .T0421_N_1_v2, .T0422_N_1_v2, .T0423_N_1_v2, .T0424_N_1_v2,
+    .T0425_N_1_v2, .T0426_N_1_v2, .T0427_N_1_v2, .T0428_N_1_v2,
+    .T0429_N_1_v2, .T0430_N_1_v2, .T0431_N_1_v2, .T0432_N_1_v2,
+    .T0433_N_1_v2, .T0434_N_1_v2, .T0405_Y_2_v2, .T0406_Y_2_v2,
+    .T0408_Y_2_v2, .T0409_Y_2_v2, .T0410_Y_2_v2, .T0411_Y_2_v2,
+    .T0412_Y_2_v2, .T0413_Y_2_v2, .T0414_Y_2_v2, .T0415_Y_2_v2,
+    .T0416_Y_2_v2, .T0417_Y_2_v2, .T0418_Y_2_v2, .T0419_Y_2_v2,
+    .T0420_Y_2_v2, .T0421_Y_2_v2, .T0422_Y_2_v2, .T0423_Y_2_v2,
+    .T0424_Y_2_v2, .T0425_Y_2_v2, .T0426_Y_2_v2, .T0427_Y_2_v2,
+    .T0428_Y_2_v2, .T0429_Y_2_v2, .T0430_Y_2_v2, .T0431_Y_2_v2,
+    .T0432_Y_2_v2, .T0433_Y_2_v2, .T0434_Y_2_v2, .T0406_N_2_v2,
+    .T0408_N_2_v2, .T0409_N_2_v2, .T0410_N_2_v2, .T0411_N_2_v2,
+    .T0412_N_2_v2, .T0413_N_2_v2, .T0414_N_2_v2, .T0415_N_2_v2,
+    .T0416_N_2_v2, .T0417_N_2_v2, .T0418_N_2_v2, .T0419_N_2_v2,
+    .T0420_N_2_v2, .T0421_N_2_v2, .T0422_N_2_v2, .T0423_N_2_v2,
+    .T0424_N_2_v2, .T0425_N_2_v2, .T0426_N_2_v2, .T0427_N_2_v2,
+    .T0428_N_2_v2, .T0429_N_2_v2, .T0430_N_2_v2, .T0431_N_2_v2,
+    .T0432_N_2_v2, .T0433_N_2_v2, .T0434_N_2_v2,
+    .T2611_1_0_v2, .T2617_1_0_v2, .T2618_1_0_v2, .T2619_1_0_v2,
+    .T2620_1_0_v2, .T2621_1_0_v2, .T2622_1_0_v2, .T2623_1_0_v2,
+    .T2624_1_0_v2, .T2625_1_0_v2, .T2626_1_0_v2, .T2627_1_0_v2,
+    .T2628_1_0_v2, .T2629_1_0_v2, .T2630_1_0_v2, .T2631_1_0_v2,
+    .T2632_1_0_v2, .T2633_1_0_v2, .T2634_1_0_v2, .T2635_1_0_v2,
+    .T2636_1_0_v2, .T2637_1_0_v2, .T2638_1_0_v2, .T2639_1_0_v2,
+    .T2640_1_0_v2, .T2641_1_0_v2, .T2642_1_0_v2, .T2643_1_0_v2,
+    .T2644_1_0_v2, .T2645_1_0_v2, .T2646_1_0_v2, .T2647_1_0_v2,
+    .T2648_1_0_v2, .T2649_1_0_v2,
+    .T2611_0_0_v2, .T2617_2_0_v2, .T2618_2_0_v2, .T2619_2_0_v2,
+    .T2620_2_0_v2, .T2621_2_0_v2, .T2622_2_0_v2, .T2623_2_0_v2,
+    .T2624_2_0_v2, .T2625_2_0_v2, .T2626_2_0_v2, .T2627_2_0_v2,
+    .T2628_2_0_v2, .T2629_2_0_v2, .T2630_2_0_v2, .T2631_2_0_v2,
+    .T2632_2_0_v2, .T2633_2_0_v2, .T2634_2_0_v2, .T2635_2_0_v2,
+    .T2636_2_0_v2, .T2637_2_0_v2, .T2638_2_0_v2, .T2639_2_0_v2,
+    .T2640_2_0_v2, .T2641_2_0_v2, .T2642_2_0_v2, .T2643_2_0_v2,
+    .T2644_2_0_v2, .T2645_2_0_v2, .T2646_2_0_v2, .T2647_2_0_v2,
+    .T2648_2_0_v2, .T2649_2_0_v2,
+    .T2611_1_1_v2, .T2612_1_1_v2, .T2613_1_1_v2, .T2614_1_1_v2,
+    .T2615_1_1_v2, .T2616_1_1_v2, .T2617_1_1_v2, .T2618_1_1_v2,
+    .T2619_1_1_v2, .T2620_1_1_v2, .T2621_1_1_v2, .T2622_1_1_v2,
+    .T2623_1_1_v2, .T2624_1_1_v2, .T2625_1_1_v2, .T2626_1_1_v2,
+    .T2627_1_1_v2, .T2628_1_1_v2, .T2629_1_1_v2, .T2630_1_1_v2,
+    .T2631_1_1_v2, .T2632_1_1_v2, .T2633_1_1_v2, .T2634_1_1_v2,
+    .T2635_1_1_v2, .T2636_1_1_v2, .T2637_1_1_v2, .T2638_1_1_v2,
+    .T2639_1_1_v2, .T2640_1_1_v2, .T2641_1_1_v2, .T2642_1_1_v2,
+    .T2643_1_1_v2, .T2644_1_1_v2, .T2645_1_1_v2, .T2646_1_1_v2,
+    .T2647_1_1_v2, .T2648_1_1_v2, .T2649_1_1_v2,
+    .T2611_0_1_v2, .T2616_2_1_v2, .T2610_2_1_v2, .T2612_2_1_v2,
+    .T2613_2_1_v2, .T2614_2_1_v2, .T2615_2_1_v2, .T2611_2_1_v2,
+    .T2617_2_1_v2, .T2618_2_1_v2, .T2619_2_1_v2, .T2620_2_1_v2,
+    .T2621_2_1_v2, .T2622_2_1_v2, .T2623_2_1_v2, .T2624_2_1_v2,
+    .T2625_2_1_v2, .T2626_2_1_v2, .T2627_2_1_v2, .T2628_2_1_v2,
+    .T2629_2_1_v2, .T2630_2_1_v2, .T2631_2_1_v2, .T2632_2_1_v2,
+    .T2633_2_1_v2, .T2634_2_1_v2, .T2635_2_1_v2, .T2636_2_1_v2,
+    .T2637_2_1_v2, .T2638_2_1_v2, .T2639_2_1_v2, .T2640_2_1_v2,
+    .T2641_2_1_v2, .T2642_2_1_v2, .T2643_2_1_v2, .T2644_2_1_v2,
+    .T2645_2_1_v2, .T2646_2_1_v2, .T2647_2_1_v2, .T2648_2_1_v2,
+    .T2649_2_1_v2 {
+ 
+      width: 24px;
+      height: 18px;
+      transform: translate(-50%, -50%);
+    }
+
+
+
+
+
+    
     .T0405_Y_1_v2 { left: 45%; top: 5%; transform: translate(-50%, -50%); }
     .T0406_Y_1_v2 { left: 45%; top: 10%; transform: translate(-50%, -50%); }
     .T0408_Y_1_v2 { left: 45%; top: 15%; transform: translate(-50%, -50%); }
