--- a/src/css/traininfo_user_v2.css
+++ b/src/css/traininfo_user_v2.css
@@ -13703,7 +13703,8 @@
     .T2641_2_1_v2, .T2642_2_1_v2, .T2643_2_1_v2, .T2644_2_1_v2,
     .T2645_2_1_v2, .T2646_2_1_v2, .T2647_2_1_v2, .T2648_2_1_v2,
     .T2649_2_1_v2 {
- 
+        left: 50%;
+        top: 50%;
       width: 24px;
       height: 18px;
       transform: translate(-50%, -50%);
