--- a/src/css/LocationScreen.css
+++ b/src/css/LocationScreen.css
@@ -92,6 +92,14 @@
     height: 50vh; /* 모바일에서 맵 높이 조정 */
   }
 
+  .map-container #map {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
   .menu-container {
     width: 100%;
     height: auto;
@@ -117,9 +125,5 @@
     font-size: 14px;
     width: 90%;
     height: 40px;
-  }
-
-  .map-container #map {
-    height: 100%;
   }
 }
