--- a/src/css/LocationScreen.css
+++ b/src/css/LocationScreen.css
@@ -1,129 +1,45 @@
+/* LocationScreen.css */
 .container {
-  display: flex; /* Flexbox 레이아웃 활성화 */
-  flex-direction: row; /* 요소들을 가로로 정렬 */
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   width: 100%;
-  min-height: 100vh;
-}
-
-.map-container {
-  flex: 1;  /* 남은 공간을 모두 차지 */
-  width: 100%;
-  height: 100vh; /* 전체 뷰포트 높이 */
-  position: relative;
-  margin-left: 250px; /* 메뉴 컨테이너의 너비만큼 여백을 추가 */
-}
-
-.map-container #map {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .menu-container {
-  z-index: 99999; 
-  left: 0;
-  top: 0; 
-  position: fixed; 
-  width: 250px; /* 메뉴 컨테이너 너비를 명시 */
-  height: 100%; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20%;
+  width: 100%;
+  background-color: #f5f5f5;
 }
 
 .menu-screen {
-  display: flex; /* Flexbox 레이아웃 활성화 */
-  flex-direction: column; /* 요소들을 세로로 정렬 */
-  justify-content: flex-start; /* 요소들을 컨테이너의 시작 부분(위)에 정렬 */
-  align-items: center; /* 요소들을 가로 방향의 중앙에 정렬 */
-  height: 100%;
-  width: 100%;
-  background-color: #20493C;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .menu-title {
-  color: #ffffff;
-  margin-top: 35px;
-  margin-bottom: 15px;
-  font-size: 40px;
+  margin: 10px 0;
 }
 
 .menu-id {
-  color: #ffffff;
-  align-self: flex-end;
-  margin-bottom: 60px;
-  margin-right: 10px;
-  font-size: 20px;
+  margin: 10px 0;
 }
 
 .menu-button {
-  background: #ffffff 50% no-repeat !important;
-  color: rgb(0, 0, 0) !important;
-  border: none;
-  padding: 10px 20px;
-  margin-top: 10px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
-  width: 75%;
-  height: 47px;
-  font-weight: bold;
+  margin: 10px 0;
 }
 
-.menu-button:hover {
-  background-color: #45a049; /* 버튼 호버 시 색상 변경 */
+.map-container {
+  position: relative;
+  height: 80%;
+  width: 100%;
 }
 
-.menu .line_on {
-  background: url(../../public/images/train/select_box.png) 50% no-repeat;
-  width: 180px;
-  height: 50px;
-  cursor: pointer;
-}
-
-/* 모바일 스타일 */
-@media (max-width: 600px) {
-  .container {
-    flex-direction: column;
-    min-height: auto;
-  }
-
-  .map-container {
-    margin-left: 0;
-    height: 50vh; /* 모바일에서 맵 높이 조정 */
-  }
-
-  .map-container #map {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-
-  .menu-container {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-
-  .menu-screen {
-    padding: 10px;
-  }
-
-  .menu-title {
-    font-size: 24px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
-
-  .menu-id {
-    font-size: 14px;
-    margin-bottom: 30px;
-  }
-
-  .menu-button {
-    font-size: 14px;
-    width: 90%;
-    height: 40px;
-  }
+#map {
+  height: 100%;
+  width: 100%;
 }
